Daniel Barros de Oliveira
Aplicação do hover no menu, inserção da tag menu, alterado a classe .btn-login e .btn-registrar para dentro da tag "a",

--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-	<header>
+	<menu>
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Cursos</a></li>
 			<li><a href="#">Sobre</a></li>
-			<li class="btn-login"><a href="#">Login</a></li>
-			<li class="btn-registrar"><a href="#">Registar</a></li>
+			<li><a class="btn-login" href="#">Login</a></li>
+			<li><a class="btn-registrar" href="#">Registrar-se</a></li>
 		</ul>
+	</menu>
+	<header>
+		
 	</header>
 	<div class="banner">
 		<figure>
 			<img src="img/banner.jpg" alt="">
 		</figure>
 	</div>
-
-	
 </body>
 </html>
