Header, Nav, Figure.
Realizado a alteração da semântica, incluindo as tags nav dentro da header, inserido a imagem para o banner, criado o efeito hover para o menu.

--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
 	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-	<menu>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Cursos</a></li>
-			<li><a href="#">Sobre</a></li>
-			<li><a class="btn-login" href="#">Login</a></li>
-			<li><a class="btn-registrar" href="#">Registrar-se</a></li>
-		</ul>
-	</menu>
 	<header>
-		
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="#">Cursos</a></li>
+				<li><a href="#">Sobre</a></li>
+				<li><a class="btn-login" href="#">Login</a></li>
+				<li><a class="btn-registrar" href="#">Registrar-se</a></li>
+			</ul>
+		</nav>		
 	</header>
 	<div class="banner">
 		<figure>
-			<img src="img/banner.jpg" alt="">
+			<img src="img/banner.jpg" alt="" width="1280" height="500">  
 		</figure>
 	</div>
 </body>
