banner, texto, botao e correções!
foi adicionado um banner e em cima dele foi colocado um texto e um botao!
E foram feitas algumas correções no header.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 		</nav>		
 	</header>
 	<div class="banner">
-		<figure>
-			<img src="img/banner.jpg" alt="" width="1280" height="500">  
-		</figure>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis nostrum facilis alias obcaecati! Ea aperiam Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat cum suscipit at dolore, magni culpa debitis dolores vero eius, minima voluptatem, numquam ex eum non alias autem hic fuga sapiente!</p>
+		<a class="btn-cadastrar" href="#">Cadastre-se Agora!</a>
 	</div>
 </body>
 </html>
