Site em Desenvolvimento
Alterado as animações do hover e cores, inserido o -webkit-, -moz- e -o-, para aumentar a compatibilidade com outros navegadores, inserido o banner e o slogan.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 		</nav>		
 	</header>
 	<div class="banner">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis nostrum facilis alias obcaecati! Ea aperiam Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat cum suscipit at dolore, magni culpa debitis dolores vero eius, minima voluptatem, numquam ex eum non alias autem hic fuga sapiente!</p>
+		<p>Quer se preparar melhor para o mercado de trabalho?
+		<br /><br />
+		Cursos com qualidade, 100% práticos e com professores experientes?
+		</p>
 		<a class="btn-cadastrar" href="#">Cadastre-se Agora!</a>
 	</div>
 </body>
